@@ -29,6 +29,7 @@
 			int main(int, char**);
 			int module_stop(int args, void *argp);
 	
+			void  PSPRadioExport_PluginExits(plugin_type type); /* Notify PSPRadio when exiting, so pspradio can unload the plugin */
 			int   PSPRadioExport_Log(char *file, int line, loglevel_enum LogLevel, char *strFormat, ...);
 			char *PSPRadioExport_GetProgramVersion();
 			bool  PSPRadioExport_IsUSBEnabled();
