@@ -72,5 +72,6 @@ void app_plugin_main()
 	main_loop(0, NULL);
 
 	pspDebugScreenInit();
-	PSPRadioExport_GiveUpExclusiveAccess();
+	///PSPRadioExport_GiveUpExclusiveAccess(); /** PluginExits gives up access too */
+	PSPRadioExport_PluginExits(PLUGIN_APP); /** Notify PSPRadio, so it can unload the plugin */
 }
