@@ -4,6 +4,9 @@ What's New for PSPRadio
 0.38.09 (r) (2006-04-x)
 NEW FEATURES
 (raf) Dyn/Retawq: tips can be overriden with your own html. Just replace APP_Retawq/tips.html!
+(raf) Dyn/Dev: New export to allow for plugins to access the sound device buffer (for visualization plugins).
+(raf) Dyn/Core: When the key combo for killing plugins is used, now the plugin will be unloaded as well (L+R+START). (A red -exception- screen may flash will unloading the plugin.. this is expected atm.)
+(raf) Core: Rename directories per HalfastII directions so that corrupted icons don't get displayed on f/w 1.5.
 BUG FIXES
 (raf) Core: Networking. Network profile enumeration code modification. Based on idea from Danzel from ps2dev forums. This may help people who's profile wasn't showing up.
 (raf) Dyn/Core: No longer tries to 'continue' a plugin if 'Off' is selected.
